fix mongoid config for production

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -68,4 +68,9 @@ test:
         consistency: :strong
 
 production:
-  uri: <%= ENV['MONGOLAB_URI'] %>
+  sessions:
+    default:
+      uri: <%= ENV['MONGOLAB_URI'] %>
+      options:
+        skip_version_check: true
+        safe: true
