try to fix mongoid connection problem

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -70,7 +70,7 @@ test:
 production:
   sessions:
     default:
-      uri: <%= ENV['MONGOLAB_URI'] %>
+      uri: "<%= ENV['MONGOLAB_URI'] %>"
       options:
         skip_version_check: true
         safe: true
