--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -70,7 +70,7 @@ test:
 production:
   sessions:
     default:
-      uri: "<%= ENV['MONGOLAB_URI'] %>"
+      uri: <%= ENV['MONGOHQ_URL'] %>
       options:
         skip_version_check: true
         safe: true
