--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,7 @@
 ---
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-8b3ffc10396694e3b31a9c2a5f312d3a.js
+application.js: application-e42d8a7b34b876b098514ef36894b3f9.js
+router.js: router
 application.css: application-500a516a6d6fb00fd400d669023ec59b.css
 foundation/orbit/bullets.jpg: foundation/orbit/bullets-0ef17726444fdafabfee9e0379b90b28.jpg
 foundation/orbit/left-arrow-small.png: foundation/orbit/left-arrow-small-2dca068ec6187e6ec094ad0becc35b68.png
